# lagrange_polynomial_solver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: argparse.h  galois.h  lagrange.h  main.cc
